Rework how production mode is detected