@@ -6,6 +6,14 @@
 package net.neoforged.fml.loading.modscan;
 
 import com.mojang.logging.LogUtils;
+import net.neoforged.fml.loading.FMLConfig;
+import net.neoforged.fml.loading.ImmediateWindowHandler;
+import net.neoforged.fml.loading.LoadingModList;
+import net.neoforged.fml.loading.LogMarkers;
+import net.neoforged.fml.loading.moddiscovery.ModFile;
+import net.neoforged.neoforgespi.language.ModFileScanData;
+import org.slf4j.Logger;
+
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
@@ -14,14 +22,6 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicInteger;
-import net.neoforged.fml.loading.FMLConfig;
-import net.neoforged.fml.loading.ImmediateWindowHandler;
-import net.neoforged.fml.loading.LoadingModList;
-import net.neoforged.fml.loading.LogMarkers;
-import net.neoforged.fml.loading.moddiscovery.ModFile;
-import net.neoforged.neoforgespi.language.ModFileScanData;
-import org.slf4j.Logger;
 
 public class BackgroundScanHandler {
     private enum ScanStatus {
@@ -45,13 +45,10 @@ public class BackgroundScanHandler {
         int maxThreads = FMLConfig.getIntConfigValue(FMLConfig.ConfigValue.MAX_THREADS);
         // Leave 1 thread for Minecraft's own bootstrap
         int poolSize = Math.max(1, maxThreads - 1);
-        AtomicInteger threadCount = new AtomicInteger();
-        modContentScanner = Executors.newFixedThreadPool(poolSize, r -> {
-            final Thread thread = Executors.defaultThreadFactory().newThread(r);
-            thread.setDaemon(true);
-            thread.setName("background-scan-handler-" + threadCount.getAndIncrement());
-            return thread;
-        });
+        modContentScanner = Executors.newFixedThreadPool(
+                poolSize,
+                Thread.ofPlatform().name("background-scan-handler-", 0).daemon().factory()
+        );
         scannedFiles = new ArrayList<>();
         pendingFiles = new ArrayList<>();
         allFiles = new ArrayList<>();
